link to plugin homepage

--- a/pages/plugin-pages.njk
+++ b/pages/plugin-pages.njk
@@ -9,6 +9,10 @@ eleventyComputed:
 layout: "base.njk"
 ---
 
+<p>
+  <a href="{{ plugin.package.links.homepage}}">Homepage</a>
+</p>
+
 <p>{{ plugin.package.description }}</p>
 
 <label for="version">Version</label>
