update some pages and setup markdownlint

--- a/pages/api-index.njk
+++ b/pages/api-index.njk
@@ -1,7 +1,7 @@
 ---
 permalink: "api/"
 title: "Chai API"
-layout: "base.njk"
+layout: "api.njk"
 ---
 
 <p>The Chai API is broken down by style or task.</p>
