--- a/pages/_layouts/base.njk
+++ b/pages/_layouts/base.njk
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ title }}</title>
+    <link rel="stylesheet" href="/assets/index.css">
     <link rel="stylesheet" href="/assets/pico.min.css">
     <link rel="stylesheet" href="/assets/prism-tomorrow.min.css">
   </head>
