--- a/pages/_layouts/base.njk
+++ b/pages/_layouts/base.njk
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ title }}</title>
-    <link rel="stylesheet" href="/assets/index.css">
-    <link rel="stylesheet" href="/assets/pico.min.css">
-    <link rel="stylesheet" href="/assets/prism-tomorrow.min.css">
+    <link rel="stylesheet" href="/index.css">
+    <link rel="stylesheet" href="/pico.min.css">
+    <link rel="stylesheet" href="/prism-tomorrow.min.css">
+
+    <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <meta name="apple-mobile-web-app-title" content="ChaiJS" />
+    <link rel="manifest" href="/site.webmanifest" />
   </head>
   <body>
     <header class="container">
