--- a/pages/_layouts/base.njk
+++ b/pages/_layouts/base.njk
@@ -14,6 +14,20 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <meta name="apple-mobile-web-app-title" content="ChaiJS" />
     <link rel="manifest" href="/site.webmanifest" />
+    <style>
+      .sidebar nav ul {
+        list-style: none;
+        padding: 0;
+      }
+
+      .sidebar nav li {
+        margin: 5px 0;
+      }
+
+      .sidebar nav details ul {
+        padding-left: 20px; /* Indent subsections */
+      }
+    </style>
   </head>
   <body>
     <header class="container">
@@ -57,6 +71,10 @@
 
     <main class="container" style="padding-top: 0;">
       <section>
+        <aside>
+          {{ content | toc | safe }}
+        </aside>
+
         {{ content | safe }}
       </section>
     </main>
