--- a/pages/_layouts/base.njk
+++ b/pages/_layouts/base.njk
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ title }}</title>
-    <link rel="stylesheet" href="/index.css">
+
+    <!-- The order of these CSS files is important for CSS targeting specificty. We override some CSS variables in
+        `index.css` so that needs to follow `pico.min.css` -->
     <link rel="stylesheet" href="/pico.min.css">
+    <link rel="stylesheet" href="/index.css">
     <link rel="stylesheet" href="/prism-tomorrow.min.css">
 
     <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
@@ -31,7 +34,10 @@
   </head>
   <body>
     <header class="container">
-      <h1>{{ title }}</h1>
+      <div style="display: flex;">
+        <img alt="" width="60" src="/logo.png">
+        <h1 style="align-self: center; margin: 0; margin-left: 1rem;">{{ title }}</h1>
+      </div>
       <nav class="container">
         <ul>
           <li>
